# PongClone

./: .gitignore  CMakeLists.txt  README.md  add_macros.cmake  copy_lib.cmake  user_defined_settings.cmake
CMake/: add_lib_boost.cmake  add_lib_sdl.cmake  add_lib_sdl_gfx.cmake  add_lib_sdl_image.cmake  add_lib_sdl_ttf.cmake  user_defined_settings.cmake
lib/gmock/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
src/gamestate/: CMakeLists.txt  GameState.cpp  GameState.h  MainMenu.cpp  MainMenu.h  StateStack.cpp  StateStack.h
src/graphics/: CMakeLists.txt  Color.cpp  Color.h  Dimension.cpp  Dimension.h  GameWindow.cpp  GameWindow.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Rectangle.cpp  Rectangle.h  RenderRect.cpp  RenderRect.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/graphics/text/: Fonts.h  Text.cpp  Text.h
src/resources/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h
src/util/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  NotImplementedException.cpp  NotImplementedException.h  Strings.cpp  Strings.h
src/video/: CMakeLists.txt  GameWindow.cpp  GameWindow.h
test/: CMakeLists.txt  GameTest.cpp  Main.cpp
test/gamestate/: CMakeLists.txt
test/graphics/: CMakeLists.txt  ColorTest.cpp  DimensionTest.cpp  GameWindowTest.cpp  PointTest.cpp  RectTest.cpp  RenderRectTest.cpp  RendererTest.cpp  SurfaceTest.cpp  TextTest.cpp  TextureTest.cpp  WindowTest.cpp
test/util/: CMakeLists.txt  StringsTest.cpp
test/video/: CMakeLists.txt  GameWindowTest.cpp
